[package]
name = "tower-ipfilter"
edition = "2021"
version = "0.1.0"
authors = ["Emil Lindfors <[email protected]>"]
keywords = ["async", "tower", "http", "ipfilter", "axum"]
categories = ["asynchronous", "web-programming", "web-programming::http-server"]
license = "MIT"

[dependencies]
bincode = { version = "2.0.0-rc.3", features = ["serde"] }
bytes = "1.7.2"
csv = "1.3.0"
dashmap = "6.1.0"
flate2 = "1.0.34"
futures-lite = "2.3.0"
http = "1.1.0"
http-body = "1.0.1"
http-body-util = "0.1.2"
ipnetwork = "0.20.0"
pin-project-lite = "0.2.14"
serde = { version = "1.0.130", features = ["derive"] }
tower = "0.5.1"
tower-layer = "0.3.3"
tower-service = "0.3.3"
zip = "2.2.0"
tracing = "0.1.26"
cfg-if = "1.0.0"
axum = { version ="0.7.7", optional = true }
hyper = { version = "1.5.0", optional = true }
futures-util = "0.3.31"
anyhow = "1.0.90"

[dev-dependencies]
axum = { version ="0.7.7" }
tokio = {version = "1.0.1", features = ["full"]}
tower-http = { version = "0.5.2", features = ["trace", "cors"]}


[features]
axum = ["dep:axum"]
hyper = ["dep:hyper"]
