[package]
name = "axum"
version = "0.2.0"
edition = "2021"

[dependencies]
axum = { version ="0.7.7" }
tokio = {version = "1.0.1", features = ["full"]}
tower-http = { version = "0.5.2", features = ["trace", "cors"]}
tracing = "0.1.26"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-ipfilter = { path = "../../tower-ipfilter", features = ["axum"]}
tower = "0.5.1"
